--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
+* {
+  margin: 0;
+  padding: 0;
+  }
+
 body{
   background-color: wheat;
   font-family: 'Roboto', sans-serif;
+}
+
+.formbutton {
+  margin: 0 auto;
+}
+#open-button {
+  position: fixed;
+  background-color: goldenrod;
+  border: 1px solid goldenrod;
+  border-radius: 8px;
+  margin-left: 10px;
+  width: 100px;
 }
 
 .form-popup {
@@ -55,7 +72,7 @@ body{
   width: 400px;
   padding: 30px;
   margin: 0 auto;
-  margin-bottom: 10px;
+  margin-top: 10px;
   border: 3px solid goldenrod;
   border-radius: 8px;
 }
@@ -64,7 +81,8 @@ body{
   font-size: 10px;
   background-color: lightcoral;
   color: black;
-  margin-left: 320px;
+  margin-left: 330px;
+  width: 75px;
   cursor: pointer;
   border: none;
   opacity: .8;
